--- a/.starship.toml
+++ b/.starship.toml
@@ -31,9 +31,9 @@ contexts = [
 
 [git_branch]
 format = "[$symbol$branch]($style) "
+ignore_branches = ['master', 'main']
 disabled = false
 
 [git_status]
 style = "yellow"
 disabled = false
-
